[tool.poetry]
name = "st_mlbee"
version = "0.1.0-alpha.2"
description = "st-mlbee, mlbee powered by streamlit"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/mlbee"

[tool.poetry.dependencies]
python = "^3.8.3"
logzero = "^1.7.0"
set-loglevel = "^0.1.2"
icecream = "^2.1.1"
install = "^1.3.5"
tqdm = "^4.64.0"
about-time = "^3.1.1"
more-itertools = "^8.13.0"
cmat2aset = "^0.1.0-alpha.7"
aset2pairs = "^0.1.0"
pendulum = "^2.1.2"
streamlit = "^1.10.0"
loguru = "^0.6.0"
streamlit-option-menu = "^0.3.2"
httpx = "^0.23.0"
html2text = "^2020.1.16"
readability-lxml = "^0.8.1"
hf-model-s-cpu = "^0.1.1"
cchardet = "^2.1.7"
streamlit-aggrid = "^0.2.3"
typer = "^0.4.1"
XlsxWriter = "^3.0.3"
seg-text = "^0.1.2"

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test or poetry run poe test"
test = "pytest tests"
pyright = "pyright st_mlbee"
flake8 = "flake8 st_mlbee --ignore F401,E501,F841"
check = ["pyright", "flake8"]
export = "poetry export --without-hashes -f requirements.txt -o requirements.txt"
build = "poetry build"
publish = "poetry publish"
release = ["test", "build", "publish"]
lint = { cmd = "pylint st_mlbee" }
isort = "isort tests st_mlbee"
black = "black tests st_mlbee"
format = ["isort", "black"]
docstyle = "pydocstyle --convention=google tests st_mlbee"
prerelease = {cmd = "poetry version prerelease && sync-version"}
tunnel = {cmd = "ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
# tbump = "^6.3.2"
poethepoet = "^0.10.0"

[tool.poetry.scripts]
"st-mlbee" = "st_mlbee.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
log_cli = true
testpaths = [
    "tests",
    # "integration",
]

[tool.black]
skip-string-normalization = 0

[tool.isort]
profile = "black"
multi_line_output = 3
